[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yo"
version = "0.1.0"
description = "Shell-first, offline-first local network runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "zeroconf>=0.136.0",
]

[project.scripts]
yo = "yo.cli:app"
yod = "yo.daemon:app"

[tool.hatch.build.targets.wheel]
packages = ["yo"]
